2005-09-12  Don Allingham  <don@gramps-project.org>
	* src/NameEdit.py: preserve custom name types
	* src/plugins/ScratchPad.py: handle unicode better
	* src/DdTargets.py: handle unicode better

2005-09-11  Don Allingham  <don@gramps-project.org>
	* src/NameDisplay: include nickname if available
	* src/plugins/ScratchPad.py: Handle null handle

2005-09-10  Don Allingham  <don@gramps-project.org>
	* src/ImageSelect.py: fix adding a new image that is actually
	already in the database.

2005-09-06  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: suppress dates on list pages for restricted
	people
	* doc/gramps-manual/C/getstart.xml: text and graphics improvements
	* doc/gramps-manual/C/mainwin.xml: text and graphics improvements
	* doc/gramps-manual/C/usage.xml: text and graphics improvements

2005-09-05  Eero Tamminen  <eerot@sf>
	* src/plugins/StatisticsChart.py: string changes
	  "Number of relationship" -> "Number of relationships" (fix)
	  "Marriage age" -> "Age at marriage" (consistency)

2005-09-05  Don Allingham  <don@gramps-project.org>
	* NEWS: update for 2.0.8
	* src/data/Makefile.am: install main6.css
	* src/plugins/NavWebPage.py: Catch exception if thumbnailer fails.

2005-09-05  Eero Tamminen  <eerot@sf>
	* src/DateParser.py: Fixed what I broke

2005-09-04  Don Allingham  <don@gramps-project.org>
	* NEWS: update for 2.0.7 release
	* src/DateDisplay.py: handle BCE better
	* src/ReadXML.py: read the patronymic portion of a name properly.

2005-09-04  Eero Tamminen  <eerot@sf>
	* src/DateParser.py: Added support for modifiers being both
	  before and after a date
	* src/dates/Date_fi.py: Completed first version of Finnish
	  date handling
	* src/dates/Makefile.am: Install Date_fi.py

2005-09-03  Don Allingham  <don@gramps-project.org>
	* src/GraphLayout.py: use recursion limit to detect db loops
	* src/Utils.py: use recursion limit to detect db loops

2005-09-03  Julio Sanchez  <jsanchez@users.sourceforge.net>