@@ -1,3 +1,6 @@
+2005-09-14  Don Allingham  <don@gramps-project.org>
+	* src/ReadGedcom.py: fix forward referencing named notes
+
 2005-09-12  Don Allingham  <don@gramps-project.org>
 	* src/NameEdit.py: preserve custom name types
 	* src/plugins/ScratchPad.py: handle unicode better
